// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Language Tour — Pattern Matching > list patterns 1`] = `
[
  {
    "codegenJS": "",
    "elaborated": "λ(list: FFI.Indexed Num Num @FFI.defaultArray) ->
  match list | [  ] -> 0 | [ x,  | xs ] -> x",
    "error": "Bridge: struct pattern dispatch not yet implemented — requires field projection and sub-pattern matching; Bridge: struct pattern dispatch not yet implemented — requires field projection and sub-pattern matching; Bridge: struct pattern dispatch not yet implemented — requires field projection and sub-pattern matching; Bridge: struct pattern dispatch not yet implemented — requires field projection and sub-pattern matching",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"firstOrZero"}
[3] lambda {"variable":"list","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [13]
  :env -> [26]
[4] app {"icit":"Implicit"}
  :arg -> [12]
  :func -> [5]
[5] app {"icit":"Explicit"}
  :arg -> [10]
  :func -> [6]
[6] app {"icit":"Explicit"}
  :arg -> [9]
  :func -> [8]
[7] var:foreign {"name":"Indexed"}
[8] var:ref {"name":"Indexed"}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
[9] lit {"value":{"type":"Atom","value":"Num"}}
[10] lit {"value":{"type":"Atom","value":"Num"}}
[11] var:foreign {"name":"defaultArray"}
[12] var:ref {"name":"defaultArray"}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
[13] match
  :alt -> [15] {"index":0}
  :alt -> [18] {"index":1}
  :decision_tree -> [22]
  :scrutinee -> [14]
[14] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[15] case
  :body -> [17]
  :next -> [18]
  :pattern -> [16]
[16] pat:struct
[17] lit {"value":{"type":"Num","value":0}}
[18] case
  :body -> [21]
  :pattern -> [19]
[19] pat:struct
  :field -> [20] {"label":"0"}
[20] pat:binder {"name":"x","level":2}
[21] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [20] {"level":2}
[22] switch {"kind":"struct"}
  :branch -> [25]
  :inspect -> [14]
[23] proj {"label":"0"}
  :target -> [14]
[24] pat:wildcard
[25] leaf
  :body -> [17]
[26] env
[27] closure
  :body -> [3]
  :env -> [26]",
    "ivl": "(forall ((list Schema))
  (and
    (= list list)
    (= list list)
    (forall (($fresh3 Schema))
      (=>
        (and (= $fresh3 list) (= $fresh3 list))
        (forall ((x Real)) (forall ((xs Schema)) (= x x)))))))",
    "kind": "let",
    "mir": "",
    "name": "firstOrZero",
    "normalized": "λ(list: FFI.Indexed Num Num @FFI.defaultArray) ->
  (closure: match list | [  ] -> 0 | [ x,  | xs ] -> x -| Γ: list)",
    "solverTrace": "=== Formula ===
  (forall ((list Schema))
    (and
      (= list list)
      (= list list)
      (forall (($fresh3 Schema))
        (=>
          (and (= $fresh3 list) (= $fresh3 list))
          (forall ((x Real)) (forall ((xs Schema)) (= x x)))))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  list=list -> residual
  $fresh3=list -> residual
  x=x -> residual
  xs=list -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(t1: FFI.Indexed Num Num @FFI.defaultArray) -> Num",
    "validity": "valid",
  },
  {
    "codegenJS": "",
    "elaborated": "λ(list: FFI.Indexed Num Num @FFI.defaultArray) ->
  match list | [  ] -> Array [] | [ x,  | xs ] -> xs",
    "error": "Bridge: struct pattern dispatch not yet implemented — requires field projection and sub-pattern matching; Bridge: struct pattern dispatch not yet implemented — requires field projection and sub-pattern matching; Bridge: struct pattern dispatch not yet implemented — requires field projection and sub-pattern matching; Bridge: struct pattern dispatch not yet implemented — requires field projection and sub-pattern matching",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"tail"}
[3] lambda {"variable":"list","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [13]
  :env -> [28]
[4] app {"icit":"Implicit"}
  :arg -> [12]
  :func -> [5]
[5] app {"icit":"Explicit"}
  :arg -> [10]
  :func -> [6]
[6] app {"icit":"Explicit"}
  :arg -> [9]
  :func -> [8]
[7] var:foreign {"name":"Indexed"}
[8] var:ref {"name":"Indexed"}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
[9] lit {"value":{"type":"Atom","value":"Num"}}
[10] lit {"value":{"type":"Atom","value":"Num"}}
[11] var:foreign {"name":"defaultArray"}
[12] var:ref {"name":"defaultArray"}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
[13] match
  :alt -> [15] {"index":0}
  :alt -> [20] {"index":1}
  :decision_tree -> [24]
  :scrutinee -> [14]
[14] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[15] case
  :body -> [17]
  :next -> [20]
  :pattern -> [16]
[16] pat:struct
[17] app {"icit":"Explicit"}
  :arg -> [19]
  :func -> [18]
[18] lit {"value":{"type":"Atom","value":"Array"}}
[19] row:empty
[20] case
  :body -> [23]
  :pattern -> [21]
[21] pat:struct
  :field -> [22] {"label":"0"}
[22] pat:binder {"name":"x","level":2}
[23] var:bound {"index":0}
  :refers_to -> [22]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [22] {"level":2}
[24] switch {"kind":"struct"}
  :branch -> [27]
  :inspect -> [14]
[25] proj {"label":"0"}
  :target -> [14]
[26] pat:wildcard
[27] leaf
  :body -> [17]
[28] env
[29] closure
  :body -> [3]
  :env -> [28]",
    "ivl": "(forall ((list Schema))
  (and
    (= list list)
    (= list list)
    (forall (($fresh6 Schema))
      (=>
        (and (= $fresh6 list) (= $fresh6 list))
        (forall ((x Real)) (forall ((xs Schema)) (= xs xs)))))))",
    "kind": "let",
    "mir": "",
    "name": "tail",
    "normalized": "λ(list: FFI.Indexed Num Num @FFI.defaultArray) ->
  (closure: match list | [  ] -> Array [] | [ x,  | xs ] -> xs -| Γ: list)",
    "solverTrace": "=== Formula ===
  (forall ((list Schema))
    (and
      (= list list)
      (= list list)
      (forall (($fresh6 Schema))
        (=>
          (and (= $fresh6 list) (= $fresh6 list))
          (forall ((x Real)) (forall ((xs Schema)) (= xs xs)))))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  list=list -> residual
  list=xs -> residual
  $fresh6=list -> residual
  $fresh6=xs -> residual
  xs=list -> residual
  xs=xs -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(t4: FFI.Indexed Num Num @FFI.defaultArray) ->
  FFI.Indexed Num Num @FFI.defaultArray",
    "validity": "valid",
  },
]
`;

exports[`Language Tour — Pattern Matching > literal patterns 1`] = `
[
  {
    "codegenJS": "function main() {
  const env_cls2 = {};
  const fnref_cls2 = closure_17;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_17(env0, n1) {
  let __block = "entry";
  while (true) {
    switch (__block) {
      case "entry": {
        (__block = "sw1");
        break;
      }
      case "sw1": {
        if ((String(n1) === "0")) {
          (__block = "case3");
          break;
        }
        (__block = "default4");
        break;
      }
      case "case3": {
        const v4 = true;
        const match0 = v4;
        (__block = "join2");
        break;
      }
      case "default4": {
        const v5 = false;
        const match0 = v5;
        (__block = "join2");
        break;
      }
      case "join2": {
        return match0;
      }
    }
  }
}
return main();
",
    "elaborated": "λ(n: Num) -> match n | 0 -> true | _ -> false",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"isZero"}
[3] lambda {"variable":"n","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [16]
[4] lit {"value":{"type":"Atom","value":"Num"}}
[5] match
  :alt -> [7] {"index":0}
  :alt -> [10] {"index":1}
  :decision_tree -> [13]
  :scrutinee -> [6]
[6] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[7] case
  :body -> [9]
  :next -> [10]
  :pattern -> [8]
[8] pat:lit {"value":{"type":"Num","value":0}}
[9] lit {"value":{"type":"Bool","value":true}}
[10] case
  :body -> [12]
  :pattern -> [11]
[11] pat:wildcard
[12] lit {"value":{"type":"Bool","value":false}}
[13] switch {"kind":"lit"}
  :branch -> [14] {"value":{"type":"Num","value":0}}
  :default -> [15]
  :inspect -> [6]
[14] leaf
  :body -> [9]
[15] leaf
  :body -> [12]
[16] env
[17] closure
  :body -> [3]
  :env -> [16]",
    "ivl": "(forall ((n Real)) (and (= n n) (= n n)))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_17
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_17(env0, n1) entry=entry
    entry:
      jump sw1
    sw1:
      branch n1 { 0 -> case3; default -> default4 }
    case3:
      let v4 = true
      let match0 = v4
      jump join2
    default4:
      let v5 = false
      let match0 = v5
      jump join2
    join2:
      return match0",
    "name": "isZero",
    "normalized": "λ(n: Num) -> (closure: match n | 0 -> true | _ -> false -| Γ: n)",
    "solverTrace": "=== Formula ===
  (forall ((n Real)) (and (= n n) (= n n)))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  n=n -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(t1: Num) -> Bool",
    "validity": "valid",
  },
]
`;

exports[`Language Tour — Pattern Matching > record patterns 1`] = `
[
  {
    "codegenJS": "",
    "elaborated": "λ(p: Σ($sig: [ y: Num, x: Num ]) . Schema [ y: Num, x: Num ]) ->
  match p | Struct [ x: a, y: b | $row_7 ] -> b",
    "error": "Bridge: struct pattern dispatch not yet implemented — requires field projection and sub-pattern matching; Bridge: struct pattern dispatch not yet implemented — requires field projection and sub-pattern matching; Bridge: struct pattern dispatch not yet implemented — requires field projection and sub-pattern matching; Bridge: struct pattern dispatch not yet implemented — requires field projection and sub-pattern matching",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"getY"}
[3] lambda {"variable":"p","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [17]
  :env -> [29]
[4] sigma {"variable":"$sig","level":1}
  :annotation -> [5]
  :body -> [10]
[5] row:ext {"label":"y"}
  :rest -> [7]
  :value -> [6]
[6] lit {"value":{"type":"Atom","value":"Num"}}
[7] row:ext {"label":"x"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Atom","value":"Num"}}
[9] row:empty
[10] app {"icit":"Explicit"}
  :arg -> [12]
  :func -> [11]
[11] lit {"value":{"type":"Atom","value":"Schema"}}
[12] row:ext {"label":"y"}
  :rest -> [14]
  :value -> [13]
[13] lit {"value":{"type":"Atom","value":"Num"}}
[14] row:ext {"label":"x"}
  :rest -> [16]
  :value -> [15]
[15] lit {"value":{"type":"Atom","value":"Num"}}
[16] row:empty
[17] match
  :alt -> [19] {"index":0}
  :decision_tree -> [25]
  :scrutinee -> [18]
[18] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[19] case
  :body -> [24]
  :pattern -> [20]
[20] pat:struct
  :field -> [21] {"label":"x"}
  :field -> [22] {"label":"y"}
[21] pat:binder {"name":"a","level":2}
[22] pat:binder {"name":"b","level":3}
[23] pat:wildcard
[24] var:bound {"index":1}
  :refers_to -> [22]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [21] {"level":2}
  :scope -> [22] {"level":3}
  :scope -> [23] {"level":4}
[25] switch {"kind":"struct"}
  :branch -> [28]
  :inspect -> [18]
[26] proj {"label":"x"}
  :target -> [18]
[27] proj {"label":"y"}
  :target -> [18]
[28] leaf
  :bind -> [26] {"name":"a","binder":21}
  :bind -> [27] {"name":"b","binder":22}
  :body -> [24]
[29] env
[30] closure
  :body -> [3]
  :env -> [29]",
    "ivl": "(forall (($fresh2 Schema))
  (forall ((a Real)) (forall ((b Real)) (forall (($row_7 Row)) (= b b)))))",
    "kind": "let",
    "mir": "",
    "name": "getY",
    "normalized": "λ(p: Σ($sig: [ y: Num, x: Num ]) . (closure: Schema [ y: Num, x: Num ] -| ·)) ->
  (closure: match p | Struct [ x: a, y: b | $row_7 ] -> b -| Γ: p)",
    "solverTrace": "=== Formula ===
  (forall (($fresh2 Schema))
    (forall ((a Real)) (forall ((b Real)) (forall (($row_7 Row)) (= b b)))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  a=b -> residual
  b=b -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(t1: Σ($sig: [ y: Num, x: Num ]) . Schema [ y: Num, x: Num ]) -> Num",
    "validity": "valid",
  },
  {
    "codegenJS": "",
    "elaborated": "λ(p: Σ($sig: [ y: Num, x: Num ]) . Schema [ y: Num, x: Num ]) ->
  match p | Struct [ y: a | $row_12 ] -> a",
    "error": "Bridge: struct pattern dispatch not yet implemented — requires field projection and sub-pattern matching; Bridge: struct pattern dispatch not yet implemented — requires field projection and sub-pattern matching; Bridge: struct pattern dispatch not yet implemented — requires field projection and sub-pattern matching; Bridge: struct pattern dispatch not yet implemented — requires field projection and sub-pattern matching",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"getY2"}
[3] lambda {"variable":"p","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [17]
  :env -> [27]
[4] sigma {"variable":"$sig","level":1}
  :annotation -> [5]
  :body -> [10]
[5] row:ext {"label":"y"}
  :rest -> [7]
  :value -> [6]
[6] lit {"value":{"type":"Atom","value":"Num"}}
[7] row:ext {"label":"x"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Atom","value":"Num"}}
[9] row:empty
[10] app {"icit":"Explicit"}
  :arg -> [12]
  :func -> [11]
[11] lit {"value":{"type":"Atom","value":"Schema"}}
[12] row:ext {"label":"y"}
  :rest -> [14]
  :value -> [13]
[13] lit {"value":{"type":"Atom","value":"Num"}}
[14] row:ext {"label":"x"}
  :rest -> [16]
  :value -> [15]
[15] lit {"value":{"type":"Atom","value":"Num"}}
[16] row:empty
[17] match
  :alt -> [19] {"index":0}
  :decision_tree -> [24]
  :scrutinee -> [18]
[18] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[19] case
  :body -> [23]
  :pattern -> [20]
[20] pat:struct
  :field -> [21] {"label":"y"}
[21] pat:binder {"name":"a","level":2}
[22] pat:wildcard
[23] var:bound {"index":1}
  :refers_to -> [21]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [21] {"level":2}
  :scope -> [22] {"level":3}
[24] switch {"kind":"struct"}
  :branch -> [26]
  :inspect -> [18]
[25] proj {"label":"y"}
  :target -> [18]
[26] leaf
  :bind -> [25] {"name":"a","binder":21}
  :body -> [23]
[27] env
[28] closure
  :body -> [3]
  :env -> [27]",
    "ivl": "(forall (($fresh4 Schema)) (forall ((a Real)) (forall (($row_12 Row)) (= a a))))",
    "kind": "let",
    "mir": "",
    "name": "getY2",
    "normalized": "λ(p: Σ($sig: [ y: Num, x: Num ]) . (closure: Schema [ y: Num, x: Num ] -| ·)) ->
  (closure: match p | Struct [ y: a | $row_12 ] -> a -| Γ: p)",
    "solverTrace": "=== Formula ===
  (forall (($fresh4 Schema)) (forall ((a Real)) (forall (($row_12 Row)) (= a a))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  a=a -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(t3: Σ($sig: [ y: Num, x: Num ]) . Schema [ y: Num, x: Num ]) -> Num",
    "validity": "valid",
  },
]
`;

exports[`Language Tour — Pattern Matching > recursive functions 1`] = `
[
  {
    "codegenJS": "function main() {
  return v0;
}
return main();
",
    "elaborated": "List",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"List"}
[3] mu {"variable":"x","source":"List","level":1}
  :annotation -> [4]
  :body -> [7]
[4] pi {"variable":"t1","icit":"Explicit","level":1}
  :annotation -> [5]
  :body -> [6]
[5] lit {"value":{"type":"Atom","value":"Type"}}
[6] lit {"value":{"type":"Atom","value":"Type"}}
[7] lambda {"variable":"a","icit":"Explicit","level":2}
  :annotation -> [8]
  :body -> [9]
  :env -> [24]
[8] lit {"value":{"type":"Atom","value":"Type"}}
[9] app {"icit":"Explicit"}
  :arg -> [11]
  :func -> [10]
[10] lit {"value":{"type":"Atom","value":"Variant"}}
[11] row:ext {"label":"cons"}
  :rest -> [21]
  :value -> [12]
[12] app {"icit":"Explicit"}
  :arg -> [14]
  :func -> [13]
[13] lit {"value":{"type":"Atom","value":"Schema"}}
[14] row:ext {"label":"1"}
  :rest -> [18]
  :value -> [15]
[15] app {"icit":"Explicit"}
  :arg -> [17]
  :func -> [16]
[16] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[17] var:bound {"index":0}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[18] row:ext {"label":"0"}
  :rest -> [20]
  :value -> [19]
[19] var:bound {"index":0}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[20] row:empty
[21] row:ext {"label":"nil"}
  :rest -> [23]
  :value -> [22]
[22] lit {"value":{"type":"Atom","value":"Unit"}}
[23] row:empty
[24] env
  :capture -> [3] {"index":0}
[25] closure
  :body -> [7]
  :env -> [24]",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      return v0",
    "name": "List",
    "normalized": "List",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Π(t1: Type) -> Type",
    "validity": "valid",
  },
  {
    "codegenJS": "",
    "elaborated": "λ(a: Type) =>
  λ(list: (List) a) ->
    match list
      | Variant [ nil: _ | $row_7 ] -> 0
      | Variant [ cons: Struct [ 0: x, 1: xs | $row_12 ] | $row_13 ] ->
          FFI.$add 1 (I6 @a xs)",
    "error": "Unbound bound variable in synth; Unbound bound variable in synth; Unbound bound variable in synth; Bridge: struct pattern dispatch not yet implemented — requires field projection and sub-pattern matching; Bridge: struct pattern dispatch not yet implemented — requires field projection and sub-pattern matching; Bridge: struct pattern dispatch not yet implemented — requires field projection and sub-pattern matching; Bridge: struct pattern dispatch not yet implemented — requires field projection and sub-pattern matching",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"length"}
[3] lambda {"variable":"a","icit":"Implicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [62]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] lambda {"variable":"list","icit":"Explicit","level":2}
  :annotation -> [6]
  :body -> [29]
  :env -> [63]
[6] app {"icit":"Explicit"}
  :arg -> [28]
  :func -> [7]
[7] mu {"variable":"x","source":"List","level":2}
  :annotation -> [8]
  :body -> [11]
[8] pi {"variable":"t1","icit":"Explicit","level":2}
  :annotation -> [9]
  :body -> [10]
[9] lit {"value":{"type":"Atom","value":"Type"}}
[10] lit {"value":{"type":"Atom","value":"Type"}}
[11] lambda {"variable":"a","icit":"Explicit","level":3}
  :annotation -> [12]
  :body -> [13]
  :env -> [64]
[12] lit {"value":{"type":"Atom","value":"Type"}}
[13] app {"icit":"Explicit"}
  :arg -> [15]
  :func -> [14]
[14] lit {"value":{"type":"Atom","value":"Variant"}}
[15] row:ext {"label":"cons"}
  :rest -> [25]
  :value -> [16]
[16] app {"icit":"Explicit"}
  :arg -> [18]
  :func -> [17]
[17] lit {"value":{"type":"Atom","value":"Schema"}}
[18] row:ext {"label":"1"}
  :rest -> [22]
  :value -> [19]
[19] app {"icit":"Explicit"}
  :arg -> [21]
  :func -> [20]
[20] var:bound {"index":1}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [11] {"level":3}
[21] var:bound {"index":0}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [11] {"level":3}
[22] row:ext {"label":"0"}
  :rest -> [24]
  :value -> [23]
[23] var:bound {"index":0}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [11] {"level":3}
[24] row:empty
[25] row:ext {"label":"nil"}
  :rest -> [27]
  :value -> [26]
[26] lit {"value":{"type":"Atom","value":"Unit"}}
[27] row:empty
[28] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[29] match
  :alt -> [31] {"index":0}
  :alt -> [36] {"index":1}
  :decision_tree -> [54]
  :scrutinee -> [30]
[30] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[31] case
  :body -> [35]
  :next -> [36]
  :pattern -> [32]
[32] pat:variant {"label":"nil"}
  :payload -> [33]
[33] pat:wildcard
[34] pat:wildcard
[35] lit {"value":{"type":"Num","value":0}}
[36] case
  :body -> [53]
  :pattern -> [37]
[37] pat:variant {"label":"cons"}
  :payload -> [38]
[38] pat:struct
  :field -> [39] {"label":"0"}
  :field -> [40] {"label":"1"}
[39] pat:binder {"name":"x","level":3}
[40] pat:binder {"name":"xs","level":4}
[41] pat:wildcard
[42] pat:wildcard
[45] var:foreign {"name":"$add","arity":2}
[47] lit {"value":{"type":"Num","value":1}}
  :next -> [48]
[48] app {"icit":"Explicit"}
  :arg -> [52]
  :func -> [49]
[49] app {"icit":"Implicit"}
  :arg -> [51]
  :func -> [50]
[50] var:bound {"index":6}
  :refers_to -> [2]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [39] {"level":3}
  :scope -> [40] {"level":4}
  :scope -> [41] {"level":5}
  :scope -> [42] {"level":6}
[51] var:bound {"index":5}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [39] {"level":3}
  :scope -> [40] {"level":4}
  :scope -> [41] {"level":5}
  :scope -> [42] {"level":6}
[52] var:bound {"index":2}
  :refers_to -> [40]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [39] {"level":3}
  :scope -> [40] {"level":4}
  :scope -> [41] {"level":5}
  :scope -> [42] {"level":6}
[53] primop {"op":"$add"}
  :arg -> [47] {"index":0}
  :arg -> [48] {"index":1}
  :callee -> [45]
[54] switch {"kind":"tag"}
  :branch -> [56] {"label":"nil"}
  :branch -> [58] {"label":"cons"}
  :inspect -> [30]
[55] proj {"label":"nil"}
  :target -> [30]
[56] leaf
  :body -> [35]
[57] proj {"label":"cons"}
  :target -> [30]
[58] switch {"kind":"struct"}
  :branch -> [61]
  :inspect -> [57]
[59] proj {"label":"0"}
  :target -> [57]
[60] proj {"label":"1"}
  :target -> [57]
[61] leaf
  :bind -> [59] {"name":"x","binder":39}
  :bind -> [60] {"name":"xs","binder":40}
  :body -> [53]
[62] env
  :capture -> [2] {"index":0}
[63] env
  :capture -> [2] {"index":0}
  :capture -> [3] {"index":1}
[64] env
  :capture -> [7] {"index":0}
[65] closure
  :body -> [3]
  :env -> [62]
[66] closure
  :body -> [5]
  :env -> [63]
[67] closure
  :body -> [11]
  :env -> [64]",
    "ivl": "",
    "kind": "let",
    "mir": "",
    "name": "length",
    "normalized": "λ(a: Type) =>
  (closure: λ(list: (List) a) ->
    match list
      | Variant [ nil: _ | $row_7 ] -> 0
      | Variant [ cons: Struct [ 0: x, 1: xs | $row_12 ] | $row_13 ] ->
          FFI.$add 1 (I6 @a xs) -| Γ: a)",
    "solverTrace": "",
    "type": "Π(a: Type) => Π(t2: (List) a) -> Num",
    "validity": "",
  },
]
`;

exports[`Language Tour — Pattern Matching > recursive record fields 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = {};
  return v0;
}
return main();
",
    "elaborated": "Σ($sig: [ compute: Π(t1: Num) -> Num ]) . Schema [ compute: Π(t1: Num) -> Num ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Factorial"}
[3] sigma {"variable":"$sig","level":1}
  :annotation -> [4]
  :body -> [10]
[4] row:ext {"label":"compute"}
  :rest -> [9]
  :value -> [5]
[5] pi {"variable":"t1","icit":"Explicit","level":1}
  :annotation -> [7]
  :body -> [8]
[6] var:free {"name":"Num"}
[7] var:ref {"name":"Num"}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
[8] var:ref {"name":"Num"}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [5] {"level":1}
[9] row:empty
[10] app {"icit":"Explicit"}
  :arg -> [12]
  :func -> [11]
[11] lit {"value":{"type":"Atom","value":"Schema"}}
[12] row:ext {"label":"compute"}
  :rest -> [16]
  :value -> [13]
[13] pi {"variable":"t1","icit":"Explicit","level":2}
  :annotation -> [14]
  :body -> [15]
[14] var:ref {"name":"Num"}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[15] var:ref {"name":"Num"}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [13] {"level":2}
[16] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = alloc {  }
      return v0",
    "name": "Factorial",
    "normalized": "Σ($sig: [ compute: Π(t1: Num) -> (closure: Num -| Γ: t1) ]) .
  (closure: Schema [ compute: Π(t1: Num) -> Num ] -| ·)",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Type",
    "validity": "valid",
  },
  {
    "error": "Expected number, got wildcard",
    "kind": "let",
    "name": "fact",
  },
  {
    "error": "Variable not found: fact",
    "kind": "let",
    "name": "result",
  },
]
`;

exports[`Language Tour — Pattern Matching > variant patterns 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = {};
  const v1 = Num;
  const v2 = {
    1: v1,
    0: v1
  };
  const v3 = {
    point: v0,
    rectangle: v2,
    circle: v1
  };
  return v3;
}
return main();
",
    "elaborated": "Variant
  [ point: Σ($sig: [ y: Num, x: Num ]) . Schema [ y: Num, x: Num ],
    rectangle: Schema [ 1: Num, 0: Num ],
    circle: Num ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Shape"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Variant"}}
[5] row:ext {"label":"point"}
  :rest -> [20]
  :value -> [6]
[6] sigma {"variable":"$sig","level":1}
  :annotation -> [7]
  :body -> [13]
[7] row:ext {"label":"y"}
  :rest -> [10]
  :value -> [9]
[8] var:free {"name":"Num"}
[9] var:ref {"name":"Num"}
  :refers_to -> [8]
  :scope -> [2] {"level":0}
[10] row:ext {"label":"x"}
  :rest -> [12]
  :value -> [11]
[11] var:ref {"name":"Num"}
  :refers_to -> [8]
  :scope -> [2] {"level":0}
[12] row:empty
[13] app {"icit":"Explicit"}
  :arg -> [15]
  :func -> [14]
[14] lit {"value":{"type":"Atom","value":"Schema"}}
[15] row:ext {"label":"y"}
  :rest -> [17]
  :value -> [16]
[16] var:ref {"name":"Num"}
  :refers_to -> [8]
  :scope -> [2] {"level":0}
  :scope -> [6] {"level":1}
[17] row:ext {"label":"x"}
  :rest -> [19]
  :value -> [18]
[18] var:ref {"name":"Num"}
  :refers_to -> [8]
  :scope -> [2] {"level":0}
  :scope -> [6] {"level":1}
[19] row:empty
[20] row:ext {"label":"rectangle"}
  :rest -> [28]
  :value -> [21]
[21] app {"icit":"Explicit"}
  :arg -> [23]
  :func -> [22]
[22] lit {"value":{"type":"Atom","value":"Schema"}}
[23] row:ext {"label":"1"}
  :rest -> [25]
  :value -> [24]
[24] var:ref {"name":"Num"}
  :refers_to -> [8]
  :scope -> [2] {"level":0}
[25] row:ext {"label":"0"}
  :rest -> [27]
  :value -> [26]
[26] var:ref {"name":"Num"}
  :refers_to -> [8]
  :scope -> [2] {"level":0}
[27] row:empty
[28] row:ext {"label":"circle"}
  :rest -> [30]
  :value -> [29]
[29] var:ref {"name":"Num"}
  :refers_to -> [8]
  :scope -> [2] {"level":0}
[30] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = alloc {  }
      let v1 = Num
      let v2 = alloc { 1: v1, 0: v1 }
      let v3 = alloc { point: v0, rectangle: v2, circle: v1 }
      return v3",
    "name": "Shape",
    "normalized": "Variant
  [ point: Σ($sig: [ y: Num, x: Num ]) .
      (closure: Schema [ y: Num, x: Num ] -| ·),
    rectangle: Schema [ 1: Num, 0: Num ],
    circle: Num ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Type",
    "validity": "valid",
  },
  {
    "codegenJS": "",
    "elaborated": "λ(s: Variant
  [ point: Σ($sig: [ y: Num, x: Num ]) . Schema [ y: Num, x: Num ],
    rectangle: Schema [ 1: Num, 0: Num ],
    circle: Num ]) ->
  match s
    | Variant [ circle: r | $row_10 ] -> "Circle with radius"
    | Variant [ rectangle: Struct [ 0: w, 1: h | $row_15 ] | $row_16 ] ->
        "Rectangle"
    | Variant [ point: Struct [ x: _, y: _ | $row_21 ] | $row_22 ] ->
        "Point at coordinates"",
    "error": "Bridge: struct pattern dispatch not yet implemented — requires field projection and sub-pattern matching; Bridge: struct pattern dispatch not yet implemented — requires field projection and sub-pattern matching; Bridge: struct pattern dispatch not yet implemented — requires field projection and sub-pattern matching; Bridge: struct pattern dispatch not yet implemented — requires field projection and sub-pattern matching",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"describeShape"}
[3] lambda {"variable":"s","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [31]
  :env -> [67]
[4] app {"icit":"Explicit"}
  :arg -> [6]
  :func -> [5]
[5] lit {"value":{"type":"Atom","value":"Variant"}}
[6] row:ext {"label":"point"}
  :rest -> [20]
  :value -> [7]
[7] sigma {"variable":"$sig","level":1}
  :annotation -> [8]
  :body -> [13]
[8] row:ext {"label":"y"}
  :rest -> [10]
  :value -> [9]
[9] lit {"value":{"type":"Atom","value":"Num"}}
[10] row:ext {"label":"x"}
  :rest -> [12]
  :value -> [11]
[11] lit {"value":{"type":"Atom","value":"Num"}}
[12] row:empty
[13] app {"icit":"Explicit"}
  :arg -> [15]
  :func -> [14]
[14] lit {"value":{"type":"Atom","value":"Schema"}}
[15] row:ext {"label":"y"}
  :rest -> [17]
  :value -> [16]
[16] lit {"value":{"type":"Atom","value":"Num"}}
[17] row:ext {"label":"x"}
  :rest -> [19]
  :value -> [18]
[18] lit {"value":{"type":"Atom","value":"Num"}}
[19] row:empty
[20] row:ext {"label":"rectangle"}
  :rest -> [28]
  :value -> [21]
[21] app {"icit":"Explicit"}
  :arg -> [23]
  :func -> [22]
[22] lit {"value":{"type":"Atom","value":"Schema"}}
[23] row:ext {"label":"1"}
  :rest -> [25]
  :value -> [24]
[24] lit {"value":{"type":"Atom","value":"Num"}}
[25] row:ext {"label":"0"}
  :rest -> [27]
  :value -> [26]
[26] lit {"value":{"type":"Atom","value":"Num"}}
[27] row:empty
[28] row:ext {"label":"circle"}
  :rest -> [30]
  :value -> [29]
[29] lit {"value":{"type":"Atom","value":"Num"}}
[30] row:empty
[31] match
  :alt -> [33] {"index":0}
  :alt -> [38] {"index":1}
  :alt -> [46] {"index":2}
  :decision_tree -> [54]
  :scrutinee -> [32]
[32] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[33] case
  :body -> [37]
  :next -> [38]
  :pattern -> [34]
[34] pat:variant {"label":"circle"}
  :payload -> [35]
[35] pat:binder {"name":"r","level":2}
[36] pat:wildcard
[37] lit {"value":{"type":"String","value":"Circle with radius"}}
[38] case
  :body -> [45]
  :next -> [46]
  :pattern -> [39]
[39] pat:variant {"label":"rectangle"}
  :payload -> [40]
[40] pat:struct
  :field -> [41] {"label":"0"}
  :field -> [42] {"label":"1"}
[41] pat:binder {"name":"w","level":2}
[42] pat:binder {"name":"h","level":3}
[43] pat:wildcard
[44] pat:wildcard
[45] lit {"value":{"type":"String","value":"Rectangle"}}
[46] case
  :body -> [53]
  :pattern -> [47]
[47] pat:variant {"label":"point"}
  :payload -> [48]
[48] pat:struct
  :field -> [49] {"label":"x"}
  :field -> [50] {"label":"y"}
[49] pat:wildcard
[50] pat:wildcard
[51] pat:wildcard
[52] pat:wildcard
[53] lit {"value":{"type":"String","value":"Point at coordinates"}}
[54] switch {"kind":"tag"}
  :branch -> [56] {"label":"circle"}
  :branch -> [58] {"label":"rectangle"}
  :branch -> [63] {"label":"point"}
  :inspect -> [32]
[55] proj {"label":"circle"}
  :target -> [32]
[56] leaf
  :bind -> [55] {"name":"r","binder":35}
  :body -> [37]
[57] proj {"label":"rectangle"}
  :target -> [32]
[58] switch {"kind":"struct"}
  :branch -> [61]
  :inspect -> [57]
[59] proj {"label":"0"}
  :target -> [57]
[60] proj {"label":"1"}
  :target -> [57]
[61] leaf
  :bind -> [59] {"name":"w","binder":41}
  :bind -> [60] {"name":"h","binder":42}
  :body -> [45]
[62] proj {"label":"point"}
  :target -> [32]
[63] switch {"kind":"struct"}
  :branch -> [66]
  :inspect -> [62]
[64] proj {"label":"x"}
  :target -> [62]
[65] proj {"label":"y"}
  :target -> [62]
[66] leaf
  :body -> [53]
[67] env
[68] closure
  :body -> [3]
  :env -> [67]",
    "ivl": "(forall ((s Schema)) (and (= s s) (= s s) (= s s)))",
    "kind": "let",
    "mir": "",
    "name": "describeShape",
    "normalized": "λ(s: Variant
  [ point: Σ($sig: [ y: Num, x: Num ]) .
      (closure: Schema [ y: Num, x: Num ] -| ·),
    rectangle: Schema [ 1: Num, 0: Num ],
    circle: Num ]) ->
  (closure: match s
    | Variant [ circle: r | $row_10 ] -> "Circle with radius"
    | Variant [ rectangle: Struct [ 0: w, 1: h | $row_15 ] | $row_16 ] ->
        "Rectangle"
    | Variant [ point: Struct [ x: _, y: _ | $row_21 ] | $row_22 ] ->
        "Point at coordinates" -| Γ: s)",
    "solverTrace": "=== Formula ===
  (forall ((s Schema)) (and (= s s) (= s s) (= s s)))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  s=s -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(t1: Variant
  [ point: Σ($sig: [ y: Num, x: Num ]) . Schema [ y: Num, x: Num ],
    rectangle: Schema [ 1: Num, 0: Num ],
    circle: Num ]) ->
  String",
    "validity": "valid",
  },
]
`;

exports[`Language Tour — Variants & Tagged Values > simple variants 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = "Unit";
  const v1 = "Unit";
  const v2 = "Unit";
  const v3 = {
    green: v0,
    yellow: v1,
    red: v2
  };
  return v3;
}
return main();
",
    "elaborated": "Variant [ green: Unit, yellow: Unit, red: Unit ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"TrafficLight"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Variant"}}
[5] row:ext {"label":"green"}
  :rest -> [7]
  :value -> [6]
[6] lit {"value":{"type":"Atom","value":"Unit"}}
[7] row:ext {"label":"yellow"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Atom","value":"Unit"}}
[9] row:ext {"label":"red"}
  :rest -> [11]
  :value -> [10]
[10] lit {"value":{"type":"Atom","value":"Unit"}}
[11] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = Unit
      let v1 = Unit
      let v2 = Unit
      let v3 = alloc { green: v0, yellow: v1, red: v2 }
      return v3",
    "name": "TrafficLight",
    "normalized": "Variant [ green: Unit, yellow: Unit, red: Unit ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Type",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = null;
  const v1 = {
    red: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct [ red: unit ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"light"}
[3] struct
  :field -> [4] {"label":"red"}
[4] lit {"value":{"type":"unit"}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = unit
      let v1 = alloc { red: v0 }
      return v1",
    "name": "light",
    "normalized": "Struct [ red: unit ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Variant [ green: Unit, yellow: Unit, red: Unit ]",
    "validity": "valid",
  },
]
`;

exports[`Language Tour — Variants & Tagged Values > variants with data 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = {};
  const v1 = Num;
  const v2 = {
    1: v1,
    0: v1
  };
  const v3 = {
    point: v0,
    rectangle: v2,
    circle: v1
  };
  return v3;
}
return main();
",
    "elaborated": "Variant
  [ point: Σ($sig: [ y: Num, x: Num ]) . Schema [ y: Num, x: Num ],
    rectangle: Schema [ 1: Num, 0: Num ],
    circle: Num ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Shape"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Variant"}}
[5] row:ext {"label":"point"}
  :rest -> [20]
  :value -> [6]
[6] sigma {"variable":"$sig","level":1}
  :annotation -> [7]
  :body -> [13]
[7] row:ext {"label":"y"}
  :rest -> [10]
  :value -> [9]
[8] var:free {"name":"Num"}
[9] var:ref {"name":"Num"}
  :refers_to -> [8]
  :scope -> [2] {"level":0}
[10] row:ext {"label":"x"}
  :rest -> [12]
  :value -> [11]
[11] var:ref {"name":"Num"}
  :refers_to -> [8]
  :scope -> [2] {"level":0}
[12] row:empty
[13] app {"icit":"Explicit"}
  :arg -> [15]
  :func -> [14]
[14] lit {"value":{"type":"Atom","value":"Schema"}}
[15] row:ext {"label":"y"}
  :rest -> [17]
  :value -> [16]
[16] var:ref {"name":"Num"}
  :refers_to -> [8]
  :scope -> [2] {"level":0}
  :scope -> [6] {"level":1}
[17] row:ext {"label":"x"}
  :rest -> [19]
  :value -> [18]
[18] var:ref {"name":"Num"}
  :refers_to -> [8]
  :scope -> [2] {"level":0}
  :scope -> [6] {"level":1}
[19] row:empty
[20] row:ext {"label":"rectangle"}
  :rest -> [28]
  :value -> [21]
[21] app {"icit":"Explicit"}
  :arg -> [23]
  :func -> [22]
[22] lit {"value":{"type":"Atom","value":"Schema"}}
[23] row:ext {"label":"1"}
  :rest -> [25]
  :value -> [24]
[24] var:ref {"name":"Num"}
  :refers_to -> [8]
  :scope -> [2] {"level":0}
[25] row:ext {"label":"0"}
  :rest -> [27]
  :value -> [26]
[26] var:ref {"name":"Num"}
  :refers_to -> [8]
  :scope -> [2] {"level":0}
[27] row:empty
[28] row:ext {"label":"circle"}
  :rest -> [30]
  :value -> [29]
[29] var:ref {"name":"Num"}
  :refers_to -> [8]
  :scope -> [2] {"level":0}
[30] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = alloc {  }
      let v1 = Num
      let v2 = alloc { 1: v1, 0: v1 }
      let v3 = alloc { point: v0, rectangle: v2, circle: v1 }
      return v3",
    "name": "Shape",
    "normalized": "Variant
  [ point: Σ($sig: [ y: Num, x: Num ]) .
      (closure: Schema [ y: Num, x: Num ] -| ·),
    rectangle: Schema [ 1: Num, 0: Num ],
    circle: Num ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Type",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = 5;
  const v1 = {
    circle: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct [ circle: 5 ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"c"}
[3] struct
  :field -> [4] {"label":"circle"}
[4] lit {"value":{"type":"Num","value":5}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 5
      let v1 = alloc { circle: v0 }
      return v1",
    "name": "c",
    "normalized": "Struct [ circle: 5 ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Variant
  [ point: Σ($sig: [ y: Num, x: Num ]) . Schema [ y: Num, x: Num ],
    rectangle: Schema [ 1: Num, 0: Num ],
    circle: Num ]",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = 10;
  const v1 = 20;
  const v2 = {
    0: v0,
    1: v1
  };
  const v3 = {
    rectangle: v2
  };
  return v3;
}
return main();
",
    "elaborated": "Struct [ rectangle: Struct [ 0: 10, 1: 20 ] ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"r"}
[3] struct
  :field -> [4] {"label":"rectangle"}
[4] struct
  :field -> [5] {"label":"0"}
  :field -> [6] {"label":"1"}
[5] lit {"value":{"type":"Num","value":10}}
[6] lit {"value":{"type":"Num","value":20}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 10
      let v1 = 20
      let v2 = alloc { 0: v0, 1: v1 }
      let v3 = alloc { rectangle: v2 }
      return v3",
    "name": "r",
    "normalized": "Struct [ rectangle: Struct [ 0: 10, 1: 20 ] ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Variant
  [ point: Σ($sig: [ y: Num, x: Num ]) . Schema [ y: Num, x: Num ],
    rectangle: Schema [ 1: Num, 0: Num ],
    circle: Num ]",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = 0;
  const v1 = 0;
  const v2 = {
    x: v0,
    y: v1
  };
  const v3 = {
    point: v2
  };
  return v3;
}
return main();
",
    "elaborated": "Struct [ point: Struct [ x: 0, y: 0 ] ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"p"}
[3] struct
  :field -> [4] {"label":"point"}
[4] struct
  :field -> [5] {"label":"x"}
  :field -> [6] {"label":"y"}
[5] lit {"value":{"type":"Num","value":0}}
[6] lit {"value":{"type":"Num","value":0}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 0
      let v1 = 0
      let v2 = alloc { x: v0, y: v1 }
      let v3 = alloc { point: v2 }
      return v3",
    "name": "p",
    "normalized": "Struct [ point: Struct [ x: 0, y: 0 ] ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Variant
  [ point: Σ($sig: [ y: Num, x: Num ]) . Schema [ y: Num, x: Num ],
    rectangle: Schema [ 1: Num, 0: Num ],
    circle: Num ]",
    "validity": "valid",
  },
]
`;
